# stadiumpulse-ai

./: .gitignore  .pylintrc  .ruff.toml  CONTRIBUTING.md  DEMO.md  LICENSE  MULTILINGUAL.md  README.md  SECURITY.md  antigravity-score-improvement-prompt.md  antigravity-strict-refactor-prompt.md  mypy.ini  pyproject.toml  requirements.txt  smart-stadium-ai-blueprint.md
.github/workflows/: ci.yml
backend/: __init__.py  generator.py  main.py  mypy.ini  orchestrator.py
backend/tests/: conftest.py  test_alerts.py  test_briefings.py  test_coverage_boost.py  test_crowd_density.py  test_routes.py  test_simulator.py  test_weather_geocode.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/fan-companion/: ChatInput.jsx  ChatMessage.jsx  FanCompanionChat.jsx
frontend/src/components/layout/: Footer.jsx  Header.jsx  Navigation.jsx
frontend/src/components/organizer-dashboard/: DecisionBriefPanel.jsx  DensityChart.jsx  GreenOpsPanel.jsx  OrganizerDashboard.jsx  ShiftBriefingPanel.jsx  SustainabilityPanel.jsx  TransportationPanel.jsx
frontend/src/components/shared/: ErrorBanner.jsx  LoadingSpinner.jsx
frontend/src/components/staff-copilot/: AlertCard.jsx  ExplainAlertButton.jsx  StaffCopilotFeed.jsx
frontend/src/hooks/: useAlerts.js  useChat.js  useSimulatorState.js  useStaffBriefing.js
frontend/src/services/: api.js
frontend/src/tests/: App.test.jsx
