[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ──────────────────────────────────────────────────────────────────────────────
# Project metadata
# ──────────────────────────────────────────────────────────────────────────────
[project]
name = "stadiumpulse-ai"
version = "1.0.0"
description = "AI-powered stadium operations platform for FIFA World Cup 2026 — real-time crowd management, fan assistance, and staff coordination."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["fastapi", "gemini", "ai", "stadium", "fifa", "crowd-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi==0.139.0",
    "uvicorn==0.50.2",
    "google-genai==2.10.0",
    "python-dotenv==1.2.2",
    "httpx==0.28.1",
    "pydantic==2.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Repository = "https://github.com/GamerxD01/stadiumpulse-ai"
Issues = "https://github.com/GamerxD01/stadiumpulse-ai/issues"

# ──────────────────────────────────────────────────────────────────────────────
# pytest configuration
# ──────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]

# ──────────────────────────────────────────────────────────────────────────────
# Coverage configuration
# ──────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*", "*/venv/*", "*/__pycache__/*"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

# ──────────────────────────────────────────────────────────────────────────────
# mypy configuration (mirrors mypy.ini — canonical source of truth)
# ──────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "backend.tests.*"
strict = false
disable_error_code = ["no-untyped-def", "no-untyped-call", "method-assign", "assignment"]

# ──────────────────────────────────────────────────────────────────────────────
# Ruff configuration (mirrors .ruff.toml — pyproject.toml takes precedence
# for tools that support it, keeping both for maximum tooling compatibility)
# ──────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "ANN"]
ignore = [
    "E501",   # line too long — handled by formatter
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
]
